# silog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  android.cpp  apple.cpp  apple.mm  build.cpp  build.hpp  common.hpp  linux.cpp  poc.cpp  poc.html  silog-base.cppm  silog.android.cpp  silog.apple.cpp  silog.cppm  silog.hpp  silog.wasm.cpp  silog.windows.cpp  sprintf.cpp  wasm.cpp  windows.cpp
.github/workflows/: build.yaml
